# homework

./: .coverage  .gitignore  README.md  index.html  main.py  pyproject.toml
data/: operations.json
htmlcov/: index.html
src/: .env  counter.py  decorators.py  external_api.py  filter.py  generators.py  masks.py  mylog.txt  processing.py  reading_csv.py  reading_excel.py  utils.py  widget.py
tests/: conftest.py  test-decorators.py  test_counter.py  test_decorators.py  test_external_api.py  test_filter.py  test_generators.py  test_masks.py  test_processing.py  test_reading_csv.py  test_reading_excel.py  test_utils.py  test_widget.py
