[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Bobrysheva Oxana <bobrysheva_oxana@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      .eggs
    | .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | dist
  )/
  | foo.py
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true